--- a/main.css
+++ b/main.css
@@ -1,13 +1,30 @@
 .nav li { 
     display: inline;
-    font-weight: bold;  
+    font-family: Arvo, 'serif';
 }
 
 .nav a { 
-  color: #5a5a5a;
-  font-size: 11px;
-  font-weight: bold;
-  padding: 14px 10px;
-  text-transform: uppercase;
-
+    color: #5a5a5a;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: inherit;
+    padding: 20px;
+    text-transform: uppercase;
+    
 }
+
+.main_area {
+    background-image: url(cimmy.jpg);
+    animation-fill-mode: backwards;
+    height: 500px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.main_area h1 {
+    color: #fff;
+    font-family: Arvo, 'serif';
+    font-size: 60px;
+}
+
+
